fix(input): vertical align

--- a/styles/Input.scss
+++ b/styles/Input.scss
@@ -116,7 +116,6 @@
         font-family: $--n-font-family;
         width: 100%;
         transition: color .3s $default-cubic-bezier, box-shadow .3s $default-cubic-bezier, background-color .3s $default-cubic-bezier;
-        vertical-align: bottom;
       }
       color: map-get($--input-color, 'default');
       background-color: map-get($--input-background-color, 'default');
